# parus

./: .gitignore  LICENSE  parus.cabal  readme.md
app/: Main.hs
samples/: factorial.txt  fib.txt  simple.txt
src/: AST.hs  Eval.hs  Lexer.x  Parser.y  TAC.hs  TypeCheck.hs
