name:                parus
version:             0.1.0.0
synopsis:            Imperatie language project template from stack
homepage:            https://github.com/vyacheslavhashov/parus#readme

license:             BSD3
license-file:        LICENSE

author:              Vyacheslav Hashov
maintainer:          vyacheslavhashov@gmail.com

category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable parus-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vyacheslavhashov/parus
