name:                parus
version:             0.1.0.0
synopsis:            Small imperative language 
homepage:            https://github.com/vyacheslavhashov/parus#readme

license:             BSD3
license-file:        LICENSE

author:              Vyacheslav Hashov
maintainer:          vyacheslavhashov@gmail.com

category:            Language
build-type:          Simple
extra-source-files:  src/Lexer.x
                     src/Parser.y
cabal-version:       >=1.10

library 
  hs-source-dirs: src
  exposed-modules:      Lexer
                      , Parser
                      , TypeCheck
                      , Eval
  other-modules:     AST
                   , TAC
  build-depends:       base
                     , array
                     , mtl
                     , transformers
                     , containers
                     , bifunctors
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-tools: alex, happy
  default-language:    Haskell2010

executable parus
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parus
                     , mtl
                     , transformers
  build-tools: alex, happy
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vyacheslavhashov/parus
